--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="coso-blanco">
 
       <h1><strong>C.E.T.4</strong></h1>
-      <h2>Comunidad educativa técnica</h2>
+      <h2>Comunidad educativa técnica 4</h2>
       <p>
         Creada por y para estudiantes técnicos, donde el objetivo principal es ayudarnos entre nosotros a resolver dudas, compartir conocimientos y superar juntos los desafíos de las materias de la escuela técnica.
       </p>
