--- a/indexcentralayuda.html
+++ b/indexcentralayuda.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Centro de Ayuda - CET4</title>
-  <link rel="stylesheet" href="/CET4/templates/css/Centralayuda.css" />
+  <link rel="stylesheet" href="/CET4/static/css/Centralayuda.css" />
 </head>
 <body>
   <header class="header">
   <a href="/CET4/templates/index/indexprincipal.html"  class="margen" >CET4</a>
     <nav class="nav">
       <span>Español</span>
-      <a href="#">Iniciar Sesión</a>
+      <a href="/CET4/templates/index/indexiniciarsesion.html">Iniciar Sesión</a>
     </nav>
   </header>
 
@@ -31,7 +31,7 @@
     <section class="grid">
       <article class="card">
         <img src="/CET4/utils/img/anuncio.png" alt="Ícono de Anuncios">
-        <a href="indexanuncios.html" class="boton-anuncio">Anuncios</a>
+        <h2 href="/CET4/templates/index/indexanuncios.html" class="boton-anuncio">Anuncios</h2>
         <p>Esté al tanto de nuevas noticias</p>
       </article>
 
