--- a/indexanuncios.html
+++ b/indexanuncios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anuncios</title>
-    <link rel="Stylesheet" href="anuncios.css">
+    <link rel="Stylesheet" href="estiloanuncios.css">
 </head>
 <body>
      <header class="header">
