--- a/dprogramacionindex.html
+++ b/dprogramacionindex.html
@@ -44,7 +44,7 @@
         </div>
         <div class="bloque-superpuesto">
             <img src="/CET4/utils/img/materia1.png" alt="Materias">
-            <div class="texto-superpuesto">7mo</div>
+            <a href="/CET4/templates/index/indexdseptimo.html"class="texto-superpuesto">7mo</div>
         </div>
     </div>
     <div class="footer">
